# rnd

./: CMakeLists.txt  codes.txt  notes.txt  rnd.txt  string.h.txt
headers/: rnd.h
src/: chck_fln.c  create_file.c  f_rnm.c  f_rnm_.c  flrnm.c  main.c  rec.c  rnd_gen.c  usage.c
